--- a/internal/templates/uploader.html
+++ b/internal/templates/uploader.html
@@ -30,7 +30,7 @@
 
 <body>
     <div class="file-details">
-        <form enctype="multipart/form-data" action="http://localhost:8080/upload" method="post">
+        <form enctype="multipart/form-data" action="/upload" method="post">
             <label for="">Public</label>
             <select name="public" id="">
                 <option value="true">Yes</option>
